package DesignPatterns.StrategyPattern.FlyBehaviors;

public interface FlyBehavior {
    public void fly();
}
