package DesignPatterns.StrategyPattern.QuackBehaviors;

public class Quack implements QuackBehavior {
    public void quack() {
        System.out.println("Quack");
    }
}
