package DesignPatterns.StrategyPattern.QuackBehaviors;

public interface QuackBehavior {
    public void quack();
}
